# avoda-desktop

./: .gitignore  TODO.md  package-lock.json  package.json  prreview1.py  vite.config.ts
.github/workflows/: ai-diff-review-openai.yml  build.yml
prisma/: schema.prisma
src/: App.css  App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: activity_monitor.rs  main.rs
src/components/ui/: button.tsx
src/hooks/: useTimer.ts
src/lib/: formatTime.ts
src/types/: timer.ts
