[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
sentry = "0.32.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono"] } # Removed macros feature
tokio = { version = "1", features = ["sync", "time"] }
xcap = "0.0.11" # Replaced screenshots with xcap
rand = "0.8"
dotenvy = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = "0.4" # Added explicitly as sqlx might need it directly sometimes
image = { version = "0.25", features = ["png"] } # For PNG encoding
base64 = "0.22" # Added for screenshot data URI encoding
rdev = "0.5" # Added for keyboard/mouse activity monitoring
